# portablegabi-node

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  dockerfile
.github/workflows/: release.yml  tests.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  cli.rs  service.rs
