[package]
authors = ["KILT <info@kilt.io>"]
build = 'build.rs'
edition = '2018'
homepage = 'https://kilt.io'
license = 'Unlicense'
name = 'node-portablegabi'
repository = 'https://github.com/KILTprotocol/portablegabi-node'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.node-portablegabi-runtime]
path = '../runtime'
version = '0.2.0'

[dependencies.sc-basic-authorship]
version = '0.8.0-alpha.6'

[dependencies.sc-cli]
version = '0.8.0-alpha.6'

[dependencies.sc-client]
version = '0.8.0-alpha.6'

[dependencies.sc-client-api]
version = '2.0.0-alpha.6'

[dependencies.sc-consensus-aura]
version = '0.8.0-alpha.6'

[dependencies.sc-executor]
version = '0.8.0-alpha.6'

[dependencies.sc-finality-grandpa]
version = '0.8.0-alpha.6'

[dependencies.sc-network]
version = '0.8.0-alpha.6'

[dependencies.sc-service]
version = '0.8.0-alpha.6'

[dependencies.sc-transaction-pool]
version = '2.0.0-alpha.6'

[dependencies.sp-consensus]
version = '0.8.0-alpha.6'

[dependencies.sp-consensus-aura]
version = '0.8.0-alpha.6'

[dependencies.sp-core]
version = '2.0.0-alpha.6'

[dependencies.sp-finality-grandpa]
version = '2.0.0-alpha.6'

[dependencies.sp-inherents]
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
version = '2.0.0-alpha.6'

[dependencies.sp-transaction-pool]
version = '2.0.0-alpha.6'

[build-dependencies.substrate-build-script-utils]
version = '2.0.0-alpha.6'

[[bin]]
name = 'node-portablegabi'
