[package]
authors = ["KILT <info@kilt.io>"]
build = 'build.rs'
edition = '2018'
homepage = 'https://kilt.io'
license = 'Unlicense'
name = 'node-portablegabi'
repository = 'https://github.com/KILTprotocol/portablegabi-node'
version = '2.0.0-rc2'

[[bin]]
name = 'node-portablegabi'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0-rc2'

[dependencies]
futures = '0.3.4'
log = '0.4.8'
structopt = '0.3.8'
node-portablegabi-runtime = { path = '../runtime' }
sc-basic-authorship = '0.8.0-rc2'
sc-cli = '0.8.0-rc2'
sc-client-api = '2.0.0-rc2'
sc-consensus = '0.8.0-rc2'
sc-consensus-aura = '0.8.0-rc2'
sc-executor = '0.8.0-rc2'
sc-finality-grandpa = '0.8.0-rc2'
sc-network = '0.8.0-rc2'
sc-service = '0.8.0-rc2'
sc-transaction-pool = '2.0.0-rc2'
sp-consensus = '0.8.0-rc2'
sp-consensus-aura = '0.8.0-rc2'
sp-core = '2.0.0-rc2'
sp-finality-grandpa = '2.0.0-rc2'
sp-inherents = '2.0.0-rc2'
sp-runtime = '2.0.0-rc2'
sp-transaction-pool = '2.0.0-rc2'


