[package]
authors = ["KILT <info@kilt.io>"]
build = 'build.rs'
edition = '2018'
homepage = 'https://kilt.io'
license = 'Unlicense'
name = 'portablegabi-node'
repository = 'https://github.com/KILTprotocol/portablegabi-node'
version = '2.0.0-rc3'

[[bin]]
name = 'portablegabi-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0-rc3'

[dependencies]
futures = '0.3.4'
log = '0.4.8'
structopt = '0.3.8'
portablegabi-node-runtime = { path = '../runtime' }
sc-basic-authorship = '0.8.0-rc3'
sc-cli = '0.8.0-rc3'
sc-client-api = '2.0.0-rc3'
sc-consensus = '0.8.0-rc3'
sc-consensus-aura = '0.8.0-rc3'
sc-executor = '0.8.0-rc3'
sc-finality-grandpa = '0.8.0-rc3'
sc-network = '0.8.0-rc3'
sc-service = '0.8.0-rc3'
sc-transaction-pool = '2.0.0-rc3'
sp-consensus = '0.8.0-rc3'
sp-consensus-aura = '0.8.0-rc3'
sp-core = '2.0.0-rc3'
sp-finality-grandpa = '2.0.0-rc3'
sp-inherents = '2.0.0-rc3'
sp-runtime = '2.0.0-rc3'
sp-transaction-pool = '2.0.0-rc3'


