[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'portablegabi-node-runtime-wasm'
version = '0.1.0'

[dependencies.portablegabi-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['portablegabi-node-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
panic = 'abort'
